[package]
name = "bevy_crossterm"
version = "0.4.0"
authors = ["Chris Yealy <christopherjyealy@gmail.com>"]
description = "Develop terminal games with crossterm and Bevy"
repository = "https://github.com/Mimeas-Playground/bevy_crossterm/"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.bevy]
version = "0.10"
default-features = false
features = [
         "bevy_asset",
         "bevy_render"
         ]

[dependencies]
wgpu-hal = "0.14.0"
anyhow = "1.0"
bitflags = "1.2"
crossterm = { version = "0.26", features = ["serde"] }
ron = "0.6"
serde = { version = "1.0", features = ["derive"] }
unicode-segmentation = "1.7"
broccoli = "1.2.5"

[dev-dependencies]
ron = "0.6"
textwrap = "0.13.1"

# [[example]]
# name = "window"
